# sa-assistant

./: .gitignore  README.md  app.db  config.yaml.template  pyproject.toml  server.py  test.py
integrations/: claude.json
sa_assistant/: __init__.py  context.py  db.py  instructions.py  models.py  utils.py
sa_assistant/agents/: calendar.py  daily_check.py  google_calendar.py  google_drive.py  jira.py  slack.py  triage.py
sa_assistant/asana/: api.py  models.py
sa_assistant/calendar/: agent.py
sa_assistant/daily_check/: __init__.py  agent.py  agents.py  models.py
sa_assistant/google/: __init__.py  agents.py  api.py  models.py  services.py
sa_assistant/integrations/: asana.py  slack.py
sa_assistant/integrations/google/: base.py  calendar.py  docs.py  drive.py
sa_assistant/jira/: __init__.py  agents.py
sa_assistant/slack/: __init__.py  agent.py  api.py  db.py  models.py
sa_assistant/tools/: calendar_check.py  jira.py  slack.py
sa_assistant/tools/google/: calendar.py  drive.py
sa_assistant/triage/: agent.py
sa_assistant/vectorstore/: __init__.py  chroma_store.py
