[project]
name = "sa-assistant"
version = "0.1.0"
description = "AI assistant for StackAdapt"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.1",
    "google-api-python-client>=2.170.0",
    "google-auth>=2.40.2",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "jira>=3.8.0",
    "mcp[cli]>=1.9.0",
    "openai-agents>=0.0.15",
    "pydantic>=2.11.4",
    "python-lsp-server[all]>=1.12.2",
    "pyyaml>=6.0.2",
    "slack-sdk>=3.35.0",
    "sqlmodel>=0.0.24",
]
